--- a/src/main/resources/messages/message_IT.properties
+++ b/src/main/resources/messages/message_IT.properties
@@ -1,18 +1,9 @@
-required.prodotto.nome=Il nome e' un campo obbligatorio
-required.prodotto.descrizione=La descrizione e' un campo obbligatorio
-duplicato=Questo prodotto esiste gia'
-header.persona=Dettagli prodotto
-header.persone=Elenco prodotti
-header.index=Benvenuto
-title.prodotto=Dettagli prodotto
-title.prodotti=Elenco prodotti
-title.formProdotto=Inserimento prodotto
-pageTitle.prodotto=Pagina dettagli prodotto
-index.login=Accedi
-index.register=Registrati
-header.registra=Registratione
-header.menuUtente=Menu utente
-header.menuAdmin=Menu amministratore
+required.buffet.nome=Il nome e' un campo obbligatorio
+buffet.duplicato=Questo buffet esiste gia'
+#
+required.chef.nome=Il nome e' un campo obbligatorio
+required.chef.cognome=Il cognome e' un campo obbligatorio
+chef.duplicato=Questo chef esiste gia'
 #
 required.user.nome=Il nome e' un campo obbligatorio
 required.user.cognome=Il cognome e' un campo obbligatorio
