--- a/src/main/resources/messages/message_IT.properties
+++ b/src/main/resources/messages/message_IT.properties
@@ -5,6 +5,12 @@ required.chef.nome=Il nome e' un campo obbligatorio
 required.chef.cognome=Il cognome e' un campo obbligatorio
 chef.duplicato=Questo chef esiste gia'
 #
+required.piatto.nome=Il nome e' un campo obbligatorio
+piatto.duplicato=Questo piatto esiste gia'
+#
+required.ingrediente.nome=Il nome e' un campo obbligatorio
+ingrediente.duplicato=Questo ingrediente esiste gia'
+#
 required.user.nome=Il nome e' un campo obbligatorio
 required.user.cognome=Il cognome e' un campo obbligatorio
 required.credentials.username=Username e' un campo obbligatorio
