--- a/src/main/resources/messages/message_IT.properties
+++ b/src/main/resources/messages/message_IT.properties
@@ -1,8 +1,8 @@
 required.buffet.nome=Il nome e' un campo obbligatorio
 buffet.duplicato=Questo buffet esiste gia'
 #
-required.chef.nome=Il nome e' un campo obbligatorio
-required.chef.cognome=Il cognome e' un campo obbligatorio
+NotBlank.chef.nome=Il nome e' un campo obbligatorio
+NotBlank.chef.cognome=Il cognome e' un campo obbligatorio
 chef.duplicato=Questo chef esiste gia'
 #
 required.piatto.nome=Il nome e' un campo obbligatorio
